# hewnstead

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_LICENSES.md
assets/shaders/: chunk.frag  chunk.vert  line.vert  triangle.frag  triangle.vert
docs/: known-bugs.md
docs/adr/: 0000-template.md  0001-chunk-size.md  0002-texture-array.md  0003-opengl-4.1-core.md  0004-server-tick-rate.md  0005-mit-license.md  0006-third-party-license-management.md  0007-cpm-cmake.md  0008-client-server-architecture.md  0009-entity-ownership-prediction-scope.md  0010-anti-cheat-strategy.md  0011-vertex-format-evolution.md  0012-mesh-class-specificity.md  0013-mesh-class-roster.md  0014-aesthetic-lineage.md  README.md
include/hewnstead/: block_id.hpp  camera.hpp  chunk.hpp  chunk_coord.hpp  chunk_manager.hpp  chunk_mesh.hpp  chunk_vertex.hpp  config.hpp  debug_overlay.hpp  face.hpp  glcheck.hpp  imgui_runtime.hpp  input.hpp  line_mesh.hpp  mesh.hpp  mesher.hpp  raycast.hpp  shader.hpp  texture_array.hpp  window.hpp
include/hewnstead/core/: application.hpp  config.hpp  gl_handle.hpp  gl_objects.hpp  input.hpp  orientation.hpp  profiler.hpp  splash.hpp  window.hpp
include/hewnstead/physics/: collision.hpp  player.hpp
include/hewnstead/render/: camera.hpp  chunk_mesh.hpp  chunk_vertex.hpp  debug_overlay.hpp  frustum.hpp  line_mesh.hpp  line_vertex.hpp  mesher.hpp  shader.hpp  texture_array.hpp
include/hewnstead/world/: block_accessor.hpp  block_id.hpp  chunk.hpp  chunk_coord.hpp  chunk_manager.hpp  face.hpp  raycast.hpp  worldgen.hpp
scripts/: build.sh  clean.sh  run.sh
src/: block_id.cpp  camera.cpp  chunk.cpp  chunk_manager.cpp  chunk_mesh.cpp  debug_overlay.cpp  glcheck.cpp  imgui_runtime.cpp  input.cpp  line_mesh.cpp  main.cpp  mesh.cpp  mesher.cpp  raycast.cpp  shader.cpp  splash.cpp  texture_array.cpp  window.cpp
src/core/: application.cpp  gl_check.cpp  glcheck.cpp  input.cpp  splash.cpp  window.cpp
src/physics/: collision.cpp  player.cpp
src/render/: camera.cpp  chunk_mesh.cpp  debug_overlay.cpp  frustum.cpp  imgui_runtime.cpp  line_mesh.cpp  mesher.cpp  shader.cpp  texture_array.cpp
src/world/: block_accessor.cpp  block_id.cpp  chunk.cpp  chunk_manager.cpp  raycast.cpp  worldgen.cpp
tests/: CMakeLists.txt  test_chunk.cpp  test_chunk_coord.cpp  test_chunk_manager.cpp  test_mesher.cpp  test_raycast.cpp
